k8s/01-namespace-and-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inventory-prod
