k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: synergy-crm
#Updated the namespace with the required features.
