k8s/03-databases.yaml
# ==========================================
# POSTGRESQL STATEFULSET & SERVICE
# ==========================================
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: inventory-prod
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
  namespace: inventory-prod
spec:
  serviceName: postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
# ==========================================
# MONGODB STATEFULSET & SERVICE
# ==========================================
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: inventory-prod
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-db
  namespace: inventory-prod
spec:
  serviceName: mongo-service
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
        - name: mongo
          image: mongo:7.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
---
# ==========================================
# REDIS CACHE STATEFULSET & SERVICE
# ==========================================
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: inventory-prod
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis-cache
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-cache
  namespace: inventory-prod
spec:
  serviceName: redis-service
  replicas: 1
  selector:
    matchLabels:
      app: redis-cache
  template:
    metadata:
      labels:
        app: redis-cache
    spec:
      containers:
        - name: redis
          image: redis:7.2-alpine
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-storage
              mountPath: /data
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc
