k8s/db-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cache
  namespace: synergy-crm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cache
  template:
    metadata:
      labels:
        app: redis-cache
    spec:
      containers:
        - name: redis
          image: redis:7.2-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
  namespace: synergy-crm
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis-cache
