k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: synergy-crm
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres-db
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-db
  namespace: synergy-crm
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo-db
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
  namespace: synergy-crm
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis-cache
---
apiVersion: v1
kind: Service
metadata:
  name: synergy-backend
  namespace: synergy-crm
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: synergy-backend
